# stellar_ecommerce_project

./: README.md  initialize.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  withTwin.js
.soroban/contract-ids/: dvilla.json  localfoodstore.json
.soroban/identity/: token-admin.toml
contracts/: deployments.json  tsconfig.json
contracts/dvilla/: Cargo.toml
contracts/localfoodstore/: Cargo.toml
contracts/localfoodstore/src/: lib.rs
dvillaLocalFoodStore/: dvilla_token_id  localfoodstore_id
dvillaLocalFoodStore/localfoodstore-contract/: README.md  package-lock.json  package.json
dvillaLocalFoodStore/localfoodstore-contract/src/: index.ts  method-options.ts
shared/: contracts.ts
soroban/contract-ids/: dvilla.json  localfoodstore.json
soroban/identity/: token-admin.toml
src/components/admin/: Admin.jsx
src/components/cart/: Button.tsx  Cart.jsx  Cart.tsx
src/components/food-grid/: FoodGrid.tsx  foodItems.tsx
src/components/footer/: Footer.tsx
src/components/fulfillOrder/: FulfillOrder.jsx
src/components/hero/: FoodCarousel.jsx  Hero.jsx  Mission.jsx
src/components/home/: HomePageTitle.tsx
src/components/layout/: BaseLayout.tsx  CenterBody.tsx  Wrapper.tsx
src/components/navbar/: NavBar.jsx
src/components/register/: Register.jsx  Register.tsx
src/components/reward/: Reward.tsx
src/pages/: 404.tsx  _app.tsx  _document.tsx  admin.tsx  cart.tsx  foodItems.tsx  fulfillOrders.tsx  index.tsx  register.tsx  reward.tsx  viewOrders.tsx
src/styles/: GlobalStyles.tsx
(+6 files in other folders)
